--- a/package.json
+++ b/package.json
@@ -18,11 +18,20 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^3.11.1",
+    "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-mdx": "^2.11.0",
     "gatsby-plugin-theme-ui": "^0.10.1",
     "gatsby-source-filesystem": "^3.11.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "theme-ui": "^0.10.0"
+  },
+  "devDependencies": {
+    "@babel/preset-react": "^7.13.13",
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
+    "@typescript-eslint/parser": "^4.23.0",
+    "babel-preset-gatsby": "^1.3.0",
+    "prettier": "2.2.1",
+    "typescript": "^4.2.4"
   }
 }
