--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@reduxjs/toolkit": "^1.6.1",
     "gatsby": "^3.11.1",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-mdx": "^2.11.0",
@@ -24,6 +25,7 @@
     "gatsby-source-filesystem": "^3.11.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.4",
     "theme-ui": "^0.10.0"
   },
   "devDependencies": {
