--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.4",
+    "redux-thunk": "^2.3.0",
     "theme-ui": "^0.10.0"
   },
   "devDependencies": {
