--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@graphql-tools/schema": "^7.1.5",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "@prisma/client": "^3.0.2",
+    "@prisma/client": "^3.6.0",
     "@reduxjs/toolkit": "^1.6.1",
     "apollo-server-core": "^3.3.0",
     "apollo-server-express": "^3.3.0",
@@ -33,15 +33,17 @@
     "gatsby-plugin-mdx": "^2.11.0",
     "gatsby-plugin-theme-ui": "^0.10.1",
     "gatsby-source-filesystem": "^3.11.0",
-    "graphql": "^15.6.0",
+    "graphql": "^15.8.0",
     "graphql-subscriptions": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.4",
     "redux-thunk": "^2.3.0",
+    "rxjs": "^6.6.7",
     "subscriptions-transport-ws": "^0.9.19",
-    "theme-ui": "^0.10.0"
+    "theme-ui": "^0.10.0",
+    "urql": "^2.0.5"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.13.13",
@@ -49,7 +51,7 @@
     "@typescript-eslint/parser": "^4.23.0",
     "babel-preset-gatsby": "^1.3.0",
     "prettier": "2.2.1",
-    "prisma": "^3.0.2",
+    "prisma": "^3.6.0",
     "typescript": "^4.2.4"
   }
 }
