--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby"
   ],
   "scripts": {
+    "debug": "node --inspect server/index.js",
     "develop": "gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
